@@ -2,6 +2,7 @@
 version=7.5.0
 depends:
     company
+    country
     ir
     party
 extras_depend:
