@@ -1,3 +1,4 @@
+* Do not require incoterm between European countries
 
 Version 7.4.0 - 2024-11-04
 --------------------------
